Dodat toolbar, navigation drawer i baza sa modelom

--- a/app/src/main/res/layout/main.xml
+++ b/app/src/main/res/layout/main.xml
@@ -61,7 +61,7 @@
 
 
     <ListView
-        android:id="@+id/products"
+        android:id="@+id/real_estates"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
 
